# due-date-warner

./: CONTRIBUTORS  LICENSE  README.md  main.py  query_due.py  requirements.txt  setup.cfg
due_date_warner/: main.py  query_due.py
due_date_warner/renderer/: __init__.py  console.py  html.py  markdown.py
