[metadata]
name = due_date_warner
author = Christian Mönch
author_email = christian.moench@web.de
description = Warn about due items in github projects
version = attr: due_date_warner.__version__
url = https://github.com/psychoinformatics-de/due-date-warner
keywords =
  projects
  due-dates
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  colorama
  prettytable
  python-graphql-client

[options.entry_points]
console_scripts =
  ddw = due_date_warner.main:cli
